fix(export): Support for URP Lit with metallic gloss map

--- a/Runtime/Scripts/Export/glTFast.Export.asmdef
+++ b/Runtime/Scripts/Export/glTFast.Export.asmdef
@@ -5,7 +5,9 @@
         "glTFast",
         "glTFastSchema",
         "Unity.Mathematics",
-        "Unity.Burst"
+        "Unity.Burst",
+        "Unity.RenderPipelines.Universal.Runtime",
+        "Unity.RenderPipelines.HighDefinition.Runtime"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
@@ -14,6 +16,17 @@
     "precompiledReferences": [],
     "autoReferenced": false,
     "defineConstraints": [],
-    "versionDefines": [],
+    "versionDefines": [
+        {
+            "name": "com.unity.render-pipelines.universal",
+            "expression": "7.3.1",
+            "define": "USING_URP"
+        },
+        {
+            "name": "com.unity.render-pipelines.high-definition",
+            "expression": "7.3.1",
+            "define": "USING_HDRP"
+        }
+    ],
     "noEngineReferences": false
 }
